--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
     "react-flip-move": "^2.9.13",
     "react-redux": "^5.0.5",
     "redux": "^3.6.0",
+    "redux-devtools": "^3.4.0",
+    "redux-devtools-dock-monitor": "^1.1.2",
+    "redux-devtools-log-monitor": "^1.3.0",
+    "redux-saga": "^0.15.3",
+    "reselect": "^3.0.1",
     "styled-components": "^2.0.0"
   },
   "devDependencies": {
